tests/paczka1/small_fuzzy/65463794.err
Error in line 4: G:zU S314 138,7
Error in line 1: vE8xppPS0O S723 42,7
Error in line 3: GYzU S314 31,6
